Added images and recipe pages

--- a/meats.html
+++ b/meats.html
@@ -8,18 +8,30 @@
 
 <body>
     <div class="pageHeader">
-        <h1 id="pageTitle">RECIPIE BOOK</h1>
+        <h1 id="pageTitle">RECIPE BOOK</h1>
         <nav>
             <a href="index.html">HOME</a>
             <a href="meats.html">MEATS</a>
-            <a href="sides.html">SIDES</a>
         </nav>
     </div>
     <div class="mainPageArea">
-
+        <div class="meatCatImg">
+            <a href="chickenRecipes.html"><img src="img/chicken.png"></a>
+        </div>
+        <div class="meatCatImg">
+            <a href="chickenRecipes.html"><img src="img/beef.png"></a>
+        </div>
+        <div class="meatCatImg">
+            <a href="chickenRecipes.html"><img src="img/pork.png"></a>
+        </div>
     </div>
 </body>
 
-<footer>Designed and Developed by Patrick Czeczko</footer>
+<footer>
+    <h4>Designed and Developed by Patrick Czeczko</h4>
+    <h5>
+        <a href="http://previews.123rf.com/images/robuart/robuart1602/robuart160200220/51857062-Set-a-schematic-view-of-animals-for-butcher-shop-Cow-and-pork-cattle-and-pig-chicken-and-lamb-beef-a-Stock-Vector.jpg">Images used on this page can be found here</a>
+    </h5>
+</footer>
 
 </html>
