--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
 
 <body>
     <div class="pageHeader">
-        <h1 id="pageTitle">RECIPIE BOOK</h1>
+        <h1 id="pageTitle">RECIPE BOOK</h1>
         <nav>
             <a href="index.html">HOME</a>
             <a href="meats.html">MEATS</a>
-            <a href="sides.html">SIDES</a>
         </nav>
     </div>
     <div class="mainPageArea">
         <div class="cookingQuote">
-            <h1>A Recipie has no could you as the cook must bring soul to the reciepe.</h1>
+            <h1>A Recipe has no could you as the cook must bring soul to the reciepe.</h1>
             <h2>-THOMAS KELLER</h2>
         </div>
     </div>
