--- a/recipes/JuicyRoastedChicken.html
+++ b/recipes/JuicyRoastedChicken.html
@@ -4,6 +4,7 @@
 <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="../css/index.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
@@ -15,31 +16,36 @@
         </nav>
     </div>
     <div class="recipieTableArea">
-        <h1 class="pageHeader">Juicy Roasted Chicken</h1>
-        <div class="recipeExtras">
-            <h3>1h 40m</h3>
-            <h3>423 Cal.</h3>
-        </div>
-        <div>
+        <div class="recipeHeader">
             <img src="../img/juicyRoastedChicken.jpg">
+            <h1>Juicy Roasted Chicken</h1>
         </div>
-        <div>
-            <h2>Ingredients</h2>
-            <ul>
-                <li>1 (3 pound) whole chicken</li>
-                <li>salt and black pepper to taste</li>
-                <li>1 tablespoon onion powder, or to taste</li>
-                <li>1/2 cup margarine, divided</li>
-                <li>1 stalk celery, leaves removed</li>
-            </ul>
+
+        <div class="row centerText">
+            <h3 class="col"><i class="fa fa-clock-o" aria-hidden="true"></i>&nbsp 1h40m</h3>
+            <h3 class="col"><i class="fa fa-fire" aria-hidden="true"></i>&nbsp 423 Cal.</h3>
+            <h3 class="col"><i class="fa fa-link" aria-hidden="true"></i>&nbsp <a href="http://allrecipes.com/recipe/83557/juicy-roasted-chicken/">Original Recipe</a></h3>
         </div>
-        <div>
-            <h2>Instructions</h2>
-            <ol>
-                <li>Preheat oven to 350 degrees F (175 degrees C).</li>
-                <li>Place chicken in a roasting pan, and season generously inside and out with salt and pepper. Sprinkle inside and out with onion powder. Place 3 tablespoons margarine in the chicken cavity. Arrange dollops of the remaining margarine around the chicken's exterior. Cut the celery into 3 or 4 pieces, and place in the chicken cavity.</li>
-                <li>Bake uncovered 1 hour and 15 minutes in the preheated oven, to a minimum internal temperature of 180 degrees F (82 degrees C). Remove from heat, and baste with melted margarine and drippings. Cover with aluminum foil, and allow to rest about 30 minutes before serving.</li>
-            </ol>
+
+        <div class="row">
+            <div class="col" style="max-width:25%;">
+                <h2>Ingredients</h2>
+                <ul>
+                    <li>1 (3 pound) whole chicken</li>
+                    <li>salt and black pepper to taste</li>
+                    <li>1 tablespoon onion powder, or to taste</li>
+                    <li>1/2 cup margarine, divided</li>
+                    <li>1 stalk celery, leaves removed</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h2>Instructions</h2>
+                <ol>
+                    <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+                    <li>Place chicken in a roasting pan, and season generously inside and out with salt and pepper. Sprinkle inside and out with onion powder. Place 3 tablespoons margarine in the chicken cavity. Arrange dollops of the remaining margarine around the chicken's exterior. Cut the celery into 3 or 4 pieces, and place in the chicken cavity.</li>
+                    <li>Bake uncovered 1 hour and 15 minutes in the preheated oven, to a minimum internal temperature of 180 degrees F (82 degrees C). Remove from heat, and baste with melted margarine and drippings. Cover with aluminum foil, and allow to rest about 30 minutes before serving.</li>
+                </ol>
+            </div>
         </div>
     </div>
 </body>
