Finished extra recipe pages and fixed footer on most pages

--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
             <h2>-THOMAS KELLER</h2>
         </div>
     </div>
+
 </body>
 
-<footer>Designed and Developed by Patrick Czeczko</footer>
+<div class="footer">
+    <h4>Designed and Developed by Patrick Czeczko</h4>
+    <h5>
+        <a href="http://previews.123rf.com/images/robuart/robuart1602/robuart160200220/51857062-Set-a-schematic-view-of-animals-for-butcher-shop-Cow-and-pork-cattle-and-pig-chicken-and-lamb-beef-a-Stock-Vector.jpg">Images used on this page can be found here</a>
+        </h5>
+</div>
 
 </html>
