--- a/meats.html
+++ b/meats.html
@@ -19,19 +19,19 @@
             <a href="chickenRecipes.html"><img src="img/chicken.png"></a>
         </div>
         <div class="meatCatImg">
-            <a href="chickenRecipes.html"><img src="img/beef.png"></a>
+            <a href="beefRecipes.html"><img src="img/beef.png"></a>
         </div>
         <div class="meatCatImg">
-            <a href="chickenRecipes.html"><img src="img/pork.png"></a>
+            <a href="porkRecipes.html"><img src="img/pork.png"></a>
         </div>
     </div>
 </body>
 
-<footer>
+<div class="footer">
     <h4>Designed and Developed by Patrick Czeczko</h4>
     <h5>
         <a href="http://previews.123rf.com/images/robuart/robuart1602/robuart160200220/51857062-Set-a-schematic-view-of-animals-for-butcher-shop-Cow-and-pork-cattle-and-pig-chicken-and-lamb-beef-a-Stock-Vector.jpg">Images used on this page can be found here</a>
-    </h5>
-</footer>
+        </h5>
+</div>
 
 </html>
