--- a/porkRecipes.html
+++ b/porkRecipes.html
@@ -15,8 +15,8 @@
         </nav>
     </div>
     <div class="recipieTableArea">
-        <center><img class="headerImg" src="img/chicken.png"></center>
-        <h1 class="pageHeader">Chicken Recipes</h1>
+        <center><img class="headerImg" src="img/pork.png"></center>
+        <h1 class="pageHeader">Pork Recipes</h1>
 
         <table class="recipieTable">
             <tr>
@@ -26,10 +26,10 @@
                 <th>Link</th>
             </tr>
             <tr>
-                <td>Juicy Roasted Chicken</td>
-                <td>1h 40m</td>
-                <td>423 Cal.</td>
-                <td><a href="recipes/JuicyRoastedChicken.html">Cook Now!</a></td>
+                <td>Slow Cooker Pulled Pork</td>
+                <td>7h 10m</td>
+                <td>335 Cal.</td>
+                <td><a href="recipes/SlowCookerPulledPork.html">Cook Now!</a></td>
             </tr>
         </table>
     </div>
@@ -40,7 +40,6 @@
         </h5>
     </div>
 </body>
-
 
 
 </html>
