--- a/recipes/JuicyRoastedChicken.html
+++ b/recipes/JuicyRoastedChicken.html
@@ -48,8 +48,13 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <h4>Designed and Developed by Patrick Czeczko</h4>
+        <h5>
+        <a href="http://previews.123rf.com/images/robuart/robuart1602/robuart160200220/51857062-Set-a-schematic-view-of-animals-for-butcher-shop-Cow-and-pork-cattle-and-pig-chicken-and-lamb-beef-a-Stock-Vector.jpg">Images used on this page can be found here</a>
+        </h5>
+    </div>
 </body>
 
-<footer>Designed and Developed by Patrick Czeczko</footer>
 
 </html>
