--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <div class="pageHeader">
+        <img id="chefHat" src="img/ChefHat@3x.png">
         <h1 id="pageTitle">RECIPE BOOK</h1>
         <nav>
             <a href="index.html">HOME</a>
@@ -15,19 +16,20 @@
         </nav>
     </div>
     <div class="mainPageArea">
+
         <div class="cookingQuote">
             <h1>A Recipe has no could you as the cook must bring soul to the reciepe.</h1>
             <h2>-THOMAS KELLER</h2>
         </div>
     </div>
-
-</body>
-
-<div class="footer">
-    <h4>Designed and Developed by Patrick Czeczko</h4>
-    <h5>
+    <div class="footer">
+        <h4>Designed and Developed by Patrick Czeczko</h4>
+        <h5>
         <a href="http://previews.123rf.com/images/robuart/robuart1602/robuart160200220/51857062-Set-a-schematic-view-of-animals-for-butcher-shop-Cow-and-pork-cattle-and-pig-chicken-and-lamb-beef-a-Stock-Vector.jpg">Images used on this page can be found here</a>
         </h5>
-</div>
+    </div>
+</body>
+
+
 
 </html>
