--- a/meats.html
+++ b/meats.html
@@ -8,6 +8,7 @@
 
 <body>
     <div class="pageHeader">
+        <img id="chefHat" src="img/ChefHat@3x.png">
         <h1 id="pageTitle">RECIPE BOOK</h1>
         <nav>
             <a href="index.html">HOME</a>
