--- a/recipes/JuicyRoastedChicken.html
+++ b/recipes/JuicyRoastedChicken.html
@@ -9,10 +9,11 @@
 
 <body>
     <div class="pageHeader">
+        <img id="chefHat" src="../img/ChefHat@3x.png">
         <h1 id="pageTitle">RECIPE BOOK</h1>
         <nav>
-            <a href="../index.html">HOME</a>
-            <a href="../meats.html">MEATS</a>
+            <a href="index.html">HOME</a>
+            <a href="meats.html">MEATS</a>
         </nav>
     </div>
     <div class="recipieTableArea">
