--- a/chickenRecipes.html
+++ b/chickenRecipes.html
@@ -8,6 +8,7 @@
 
 <body>
     <div class="pageHeader">
+        <img id="chefHat" src="img/ChefHat@3x.png">
         <h1 id="pageTitle">RECIPE BOOK</h1>
         <nav>
             <a href="index.html">HOME</a>
@@ -33,12 +34,7 @@
             </tr>
         </table>
     </div>
-    <div class="footer">
-        <h4>Designed and Developed by Patrick Czeczko</h4>
-        <h5>
-        <a href="http://previews.123rf.com/images/robuart/robuart1602/robuart160200220/51857062-Set-a-schematic-view-of-animals-for-butcher-shop-Cow-and-pork-cattle-and-pig-chicken-and-lamb-beef-a-Stock-Vector.jpg">Images used on this page can be found here</a>
-        </h5>
-    </div>
+    *
 </body>
 
 
