--- a/recipes/AllAmericanRoastBeef.html
+++ b/recipes/AllAmericanRoastBeef.html
@@ -12,8 +12,8 @@
         <img id="chefHat" src="../img/ChefHat@3x.png">
         <h1 id="pageTitle">RECIPE BOOK</h1>
         <nav>
-            <a href="index.html">HOME</a>
-            <a href="meats.html">MEATS</a>
+            <a href="../index.html">HOME</a>
+            <a href="../meats.html">MEATS</a>
         </nav>
     </div>
     <div class="recipieTableArea">
