Fixed auto correct mistake

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="mainPageArea">
 
         <div class="cookingQuote">
-            <h1>A Recipe has no could you as the cook must bring soul to the reciepe.</h1>
+            <h1>A Recipe has no soul, you as the cook must bring soul to the reciepe.</h1>
             <h2>-THOMAS KELLER</h2>
         </div>
     </div>
