--- a/recipes/JuicyRoastedChicken.html
+++ b/recipes/JuicyRoastedChicken.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Juicy Roasted Chicken</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="../css/index.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
