Added text to make suggested actions clearer

--- a/meats.html
+++ b/meats.html
@@ -17,6 +17,7 @@
         </nav>
     </div>
     <div class="mainPageArea">
+        <h2>Select a category of meat:</h2>
         <div class="meatCatImg">
             <a href="chickenRecipes.html"><img src="img/chicken.png"></a>
         </div>
