working on colour change working currently broken

--- a/A3/public/index.html
+++ b/A3/public/index.html
@@ -13,12 +13,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-9">
-                <h4>Your user name is: </h4>
+                <h4 id="usernameTitle">Your user name is: </h4>
                 <ul id="messages"></ul>
             </div>
             <div class="col-3">
                 <h4>Online Users</h4>
-                <ul id="onlineUsers"> </ul>
+                <ul id="onlineUsers"></ul>
             </div>
         </div>
     </div>
