--- a/A3/public/index.html
+++ b/A3/public/index.html
@@ -10,23 +10,39 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <!-- As a heading -->
+    <nav class="navbar navbar-inverse bg-primary fixed-top">
+        <h1 class="navbar-brand mb-0">chattr</h1>
+    </nav>
+    <div id="main" class="container-fluid">
         <div class="row">
-            <div class="col-9">
+            <div class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
                 <h4 id="usernameTitle">Your user name is: </h4>
-                <ul id="messages"></ul>
-            </div>
-            <div class="col-3">
+                <hr>
                 <h4>Online Users</h4>
-                <ul id="onlineUsers"></ul>
+                <ul id="onlineUsers">
+                </ul>
+                <hr>
+                <h4>Special Commands</h4>
+                <h6>/nick</h6>
+                <p>
+                    Change your chat nickname using the /nick followed by your new name.
+                </p>
+                <h6>/nickcolor</h6>
+                <p>
+                    Change your chat message color using the /nickcolor followed by a hex color.
+                </p>
             </div>
+            <div class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
+                <ul id="messages">
+                </ul>
+            </div>
+            <form class="form-inline" action="">
+                <input class="form-control col-10" id="m" autocomplete="off" placeholder="Type in a message..." />
+                <button type="button" class="btn btn-primary col-2">Send</button>
+            </form>
         </div>
     </div>
-
-    <form class="form-inline" action="">
-        <input class="form-control col-11" id="m" autocomplete="off" placeholder="Type in a message..." />
-        <button type="button" class="btn btn-primary col-1">Send</button>
-    </form>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
