Connecting users working, fixed issue where the nick would be set to a future id and create duplicate users

--- a/A3/public/index.html
+++ b/A3/public/index.html
@@ -38,7 +38,7 @@
                 </ul>
             </div>
             <form class="form-inline" action="">
-                <input class="form-control col-10" id="m" autocomplete="off" placeholder="Type in a message..." />
+                <input class="form-control col-10" id="m" autocomplete="off" placeholder="Type in a message..." autofocus/>
                 <button type="button" class="btn btn-primary col-2">Send</button>
             </form>
         </div>
